Tuan09_Admin Manage by Inheritance Account
Create and set up new class - Account .
Clas Author(NXB)/User/Publisher/Admin
inherit class Account. Among of them, class Admin has a member is vector of point of Account.
- Design Menu

--- a/OOP_TH04_ListBook/OOP_TH04_ListBook.vcxproj
+++ b/OOP_TH04_ListBook/OOP_TH04_ListBook.vcxproj
@@ -123,8 +123,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Account.cpp" />
+    <ClCompile Include="Admin.cpp" />
     <ClCompile Include="DS_HoaDon.cpp" />
     <ClCompile Include="Guest.cpp" />
+    <ClCompile Include="Header.cpp" />
     <ClCompile Include="HoaDon.cpp" />
     <ClCompile Include="ListBook.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -135,6 +138,8 @@
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Account.h" />
+    <ClInclude Include="Admin.h" />
     <ClInclude Include="DS_HoaDon.h" />
     <ClInclude Include="Guest.h" />
     <ClInclude Include="Header.h" />
